need to fix collapse button

--- a/style.scss
+++ b/style.scss
@@ -1,40 +1,116 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    padding-left: 17rem;
+    display: block;
 }
 
 #sideNav {
     text-align: center;
-    justify-content: center;
     position: fixed;
     top: 0;
     left: 0;
     display: flex;
-    flex-direction: column;
     width: 17rem;
     height: 100vh;
-    #imgHolder {
-        height: 40%;
-    }
-    ul {
-        list-style: none;
-    }
-    li {
-        background-color: pink;
-        font-size: 1.5rem;
-    }
-    #navLinks {
+    align-items: center;
+    flex-direction: column;
+    background-color: #8b61da; // #imgHolder {
+    //     height: 40%;
+    // }
+    // ul {
+    //     list-style: none;
+    // }
+    // li {
+    //     background-color: pink;
+    //     font-size: 1.5rem;
+    // }
+    #selfImage {
+        align-items: center;
+        background-color: red;
+        width: 100px;
+        height: 100px;
+        align-self: center;
+        justify-content: center;
         display: flex;
-        align-content: center;
-        margin: 0;
-        padding: 0;
+        margin-top: 100px;
+        img {
+            background-color: orange;
+            width: 50px;
+            height: 50px;
+            border: orangered solid 10px;
+            align-content: center;
+            justify-content: center;
+        }
+    }
+    .linksContainerContainer {
+        align-items: center;
+        flex-basis: auto;
+        display: flex!important;
+        flex-grow: 1;
+        #linksContainer {
+            flex-direction: column;
+            font-size: 1.5rem;
+            a {
+                color: #b394ec;
+            }
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    #sideNav {
+        text-align: center;
+        position: fixed;
+        left: 0;
+        top: 0;
+        right: 0;
+        height: 100px;
         width: 100%;
+        background-color: #8b61da;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        justify-content: flex-start;
+        #selfImage {
+            align-items: center;
+            background-color: red;
+            width: 70px;
+            height: 70px;
+            align-self: center;
+            justify-content: center;
+            display: flex;
+            margin-top: 0;
+            img {
+                background-color: orange;
+                width: 50px;
+                height: 50px;
+                border: orangered solid 10px;
+                align-content: center;
+                justify-content: center;
+            }
+        }
+        .linksContainerContainer {
+            flex-direction: row;
+            display: inline-flex;
+            flex-grow: 1;
+            #linksContainer {
+                font-size: 1.5rem;
+                flex-direction: row;
+                a {
+                    color: #b394ec;
+                }
+            }
+        }
     }
 }
 
 #rightSection {
     background-color: yellow;
-    height: 100vh;
-    display: flex;
+    width: calc(100vh-17rem);
+    margin-left: 17rem;
     section {
         min-height: 100vh;
     }
